# arp-scopex-sim

./: .gitignore  CMakeLists.txt  CheckForces.m  Climb.scp  GetBodyData.m  GetSimVar.m  Intercept.scp  Intercept2.scp  Intercept_base.scp  Makefile  Quick.scp  README.md  SCoPEx.h  Sdebug.cpp  Sdebug.m  SingleStep.scp  Straight.scp  Tilting.m  Tune.scp  balloonVolume.m  commandfile.cpp  commandfile.h  demo1.cpp  demo2.cpp  demo3.cpp  doit  doquick.sh  mdoit.sh  model_atmos.m  nsubplotst.m  scopex.cc  scopex.cpp  scopex.m  scopex_anal.m  scopex_load.m  scratch.m  scratch2.m  shape.m  vertical_180319.m  write_scp.m
Matlab/: GetJointData.m  GetSimVar.m  PlotBodyData.m  PlotJointData.m  PlotSimVar.m  Ropes.m  SolveForces.m  scopex.m  scopex_load.m  tether_180314.m
demo/: Makefile
examples/: Intercept2.scp  SingleStep.scp  Tune_base.scp  Windshear.scp  doit  doquick.sh  mdoit.sh
